Fixed form on small breakpoints

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -315,6 +315,8 @@ blockquote:after {
 .promo-img {
     background-image: url("/images/GEE_0968Crop.jpg");
     background-size: cover;
+
+    background-position: right;
 }
 
 #modalNavButton{
@@ -329,40 +331,74 @@ blockquote:after {
     background-color: transparent;
     text-align: left;
 }
-    .modal .logo a img {
-      width: 30px; }
-    .modal .modal-content {
-      background-color: transparent;
-      border: none;
-      border-radius: 7px; }
-      .modal .modal-content .modal-body {
-        border-radius: 7px;
-        overflow: hidden;
-        background-color: white;
-        padding-left: 0px;
-        padding-right: 0px;
-        -webkit-box-shadow: 0 10px 50px -10px rgba(0, 0, 0, 0.9);
-        box-shadow: 0 10px 50px -10px rgba(0, 0, 0, 0.9); }
-        .modal .modal-content .modal-body h2 {
-          font-size: 18px; }
-        .modal .modal-content .modal-body p {
-          color: #777;
-          font-size: 14px; }
-        .modal .modal-content .modal-body h3 {
-          color: #000;
-          font-size: 22px; }
-        .modal .modal-content .modal-body .close-btn {
-          color: #000; }
-        .modal .modal-content .modal-body .promo-img {
-          -webkit-box-flex: 0;
-          -ms-flex: 0 0 50%;
-          flex: 0 0 50%; }
-    .modal .cancel {
-      color: gray;
-      font-size: 14px; }
-    .modal .btn-primary {
-      padding-top: 10px;
-      padding-bottom: 10px; }
+    
+.modal .logo a img {
+  width: 30px;
+}
+  
+.modal .modal-content {
+  background-color: transparent;
+  border: none;
+  border-radius: 7px;
+}
+      
+.modal .modal-content .modal-body {
+  border-radius: 7px;
+  overflow: hidden;
+  background-color: white;
+  padding-left: 0px;
+  padding-right: 0px;
+  -webkit-box-shadow: 0 10px 50px -10px rgba(0, 0, 0, 0.9);
+  box-shadow: 0 10px 50px -10px rgba(0, 0, 0, 0.9);
+}
+        
+.modal .modal-content .modal-body h2 {
+  font-size: 18px;
+}
+        
+.modal .modal-content .modal-body p {
+  color: #777;
+  font-size: 14px;
+}
+        
+.modal .modal-content .modal-body h3 {
+  color: #000;
+  font-size: 24px;
+}
+
+.modal .modal-content .modal-body .close-btn {
+  color: #000;
+}
+        
+.modal .modal-content .modal-body .promo-img {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
+}
+
+/* Fixes header image on smaller screen resolution */
+@media screen and (max-width: 992px) {
+  .modal .modal-content .modal-body .promo-img {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 0%;
+    flex: 0 0 0%;
+  }
+}
+
+.modal .cancel {
+  color: gray;
+  font-size: 14px;
+}
+
+.modal .btn-primary {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.modal-header {
+  border-bottom: 0 none;
+  padding: 0px;
+}
 
 label {
     color: black;
